--- a/cart.html
+++ b/cart.html
@@ -56,7 +56,7 @@
     }
 
     function goHome() {
-      window.location.href = "main.html"; 
+      window.location.href = "index.html"; 
     }
 
     // 初始載入
